tests/models/struct/unnamed/u32/fail/max_length.rs
use dade::model;
#[model]
struct TestModel (
   #[field(max_length = 2)]
    u32
);
fn main() {}
